chore: 生产单优化

--- a/src/main/resources/templates/modules/produce_bom.html
+++ b/src/main/resources/templates/modules/produce_bom.html
@@ -190,6 +190,13 @@
                     name: "required",
                     width: 60,
                     align: 'center'
+                },
+                {
+                    type: "checkbox",
+                    title: "修改数量",
+                    name: "modifyQuantity",
+                    width: 60,
+                    align: 'center'
                 }
             ]
         })
