--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -334,7 +334,7 @@
                 //             value: "转子"
                 //         }
                 //     ],
-                //     onchange: function ($tr, value) {
+                //     onchange: function (context, value) {
                 //         console.log(value)
                 //     }
                 // }
