--- a/src/main/resources/templates/modules/produce_schedule.html
+++ b/src/main/resources/templates/modules/produce_schedule.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns:sp="">
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
     <link rel="stylesheet" th:href="@{/plugins/multiple-select/multiple-select.min.css}">
     <style th:inline="css">
-        .ms-parent {
-            padding: 0;
+        .modal-dialog-auto {
+            max-width: 700px;
         }
 
-        .ms-parent .ms-choice {
-            display: block;
-            border: none;
-            height: 33px;
-            line-height: 33px;
+        .modal-dialog-auto .modal-body {
+            max-height: calc(100vh - 120px);
         }
-
-        /*[(${(report.additionalInfo != null && report.additionalInfo['css'] != null ) ? report.additionalInfo['css'] : ''})]*/
 
     </style>
 </head>
@@ -28,7 +22,7 @@
         <div class="card">
             <div class="card-body">
                 <form class="form-inline query-form-container">
-                    <th:block th:each="f : ${report.queryFieldList}" th:if="${report.queryFieldList.size() > 0}">
+                    <th:block th:each="f : ${report.queryFieldList}" th:if="${report.queryFieldList != null && report.queryFieldList.size() > 0}">
                         <div class="form-group">
                             <label class="col-form-label mr-2" th:for="${f.name}" th:text="${f.label}"></label>
                             <th:block th:if="${f.type.name() ne 'DATE_RANGE'}">
@@ -50,18 +44,10 @@
                         </div>
                     </th:block>
                     <div class="form-group">
-                        <label class="col-form-label mr-2" for="material_id_container">物料</label>
-                        <div id="material_id_container"></div>
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary mr-2" type="button" name="search" th:if="${report.queryFieldList.size() > 0}">
+                        <button class="btn btn-primary mr-2" type="button" name="search" th:if="${report.queryFieldList != null && report.queryFieldList.size() > 0}">
                             <i class="fa fa-search"></i> 查询</button>
-                        <button class="btn btn-secondary mr-2" type="button" name="reset" th:if="${report.queryFieldList.size() > 0}">
+                        <button class="btn btn-secondary mr-2" type="button" name="reset" th:if="${report.queryFieldList != null && report.queryFieldList.size() > 0}">
                             <i class="fa fa-remove"></i> 重置</button>
-                        <a class="btn btn-secondary mr-2" id="exportBtn" th:href="${'/reports/' + id + '/export'}" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">
-                            <i class="fa fa-upload"></i> 导出</a>
-                        <button class="btn btn-primary" type="button" onclick="showDialog('新增')" sec:authorize="${hasAuthority(#vars.report.code + '_add')}">
-                            <i class="fa fa-plus"></i> 新增</button>
                     </div>
                 </form>
             </div>
@@ -74,42 +60,34 @@
                         <thead>
                         <tr>
                             <th style="width: 40px">序号</th>
+                            <th class="text-center" th:if="${'multiple' eq params['mode']}" style="width: 40px"><input id="table-select-all-checkbox" type="checkbox"/></th>
                             <th th:each="n : ${report.reportColumnList}" th:text="${n.label}" th:data-name="${n.name}" th:class="${n.sortable ? 'sortable text-' + n.align.name().toLowerCase() : 'text-' + n.align.name().toLowerCase() }"
                                 th:style="${n.columnWidth == null ? '': 'width: ' + n.columnWidth + 'px'}" th:if="${!n.hidden}"></th>
-                            <th class="text-center" style="width: 100px" sec:authorize="${hasAuthority(#vars.report.code + '_edit') or hasAuthority(#vars.report.code + '_delete')}" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}">操作</th>
+                            <th class="text-center" style="width: 100px">操作</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:each="m : ${grid.rows}">
                             <td th:text="${mStat.index + 1 + (grid.page - 1) * grid.pageSize}"></td>
+                            <td class="text-center" th:if="${'multiple' eq params['mode']}"><input type="checkbox" th:name="${m[0]}"/></td>
                             <td th:each="v : ${grid.rows[mStat.index]}" th:class="${'text-' + report.reportColumnList.get(vStat.index).align.name().toLowerCase()}" th:if="${!report.reportColumnList.get(vStat.index).hidden}">
-                                <a href="javascript:;" th:if="${vStat.index == 2}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="openOnNewTab('[(${m[2]})]', '[(${\'/inventory/move?referenceCode=\' + m[2]})]', '[(${m[2]})]')"></a>
-
-                                <a href="javascript:;" th:if="${vStat.index == 5 and #strings.startsWith(m[5],'PO') }" sec:authorize="${hasAuthority('pur_purchase_order_read')}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="openOnNewTab('[(${m[5]})]', '[(${\'/purchase_order/code/\' + m[5]})]', '[(${m[5]})]')"></a>
-                                <span href="javascript:;" th:if="${vStat.index == 5 and #strings.startsWith(m[5],'PO') }" sec:authorize="${!hasAuthority('pur_purchase_order_read')}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
-
-                                <a href="javascript:;" th:if="${vStat.index == 5 and #strings.startsWith(m[5],'SO') }" sec:authorize="${hasAuthority('produce_order_read')}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="openOnNewTab('[(${m[5]})]', '[(${\'/produce_orders/code/\' + m[5]})]', '[(${m[5]})]')"></a>
-                                <span href="javascript:;" th:if="${vStat.index == 5 and #strings.startsWith(m[5],'SO') }" sec:authorize="${!hasAuthority('produce_order_read')}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
-
-                                <span href="javascript:;" th:if="${vStat.index == 5 and #strings.startsWith(m[5],'PP') }" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
-
-                                <a href="javascript:;" th:if="${vStat.index == 10}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="showDialog('查看', [[${m[9]}]])"></a>
-                                <span th:if="${vStat.index != 10 and vStat.index != 2 and vStat.index != 5}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
+                                <a href="javascript:;" th:name="${report.reportColumnList.get(vStat.index).name}"  th:if="${vStat.index == 4}" th:text="${v}" th:onclick="showDialog('查看', [[${m[0]}]])"></a>
+                                <span th:name="${report.reportColumnList.get(vStat.index).name}" th:if="${vStat.index != 4}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
                             </td>
-                            <td class="text-center" sec:authorize="${hasAuthority(#vars.report.code + '_edit') or hasAuthority(#vars.report.code + '_delete')}" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}">
-<!--                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('查看', [[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">查看</a>-->
-                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('编辑', [[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_edit')}">编辑</a>
-                                <a href="javascript:;" th:onclick="deleteRow([[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_delete')}">删除</a>
+                            <td class="text-center">
+                                <a href="javascript:;" th:onclick="openOnNewTab('[(${m[10]})]', '[(${\'/reports/699659248728047616?plantId=719893335619162112&root_reference_code=\' + m[10]})]', '物料凭证')">领料记录</a>
+                                <a href="javascript:;" th:onclick="completeProduce([[${m[0]}]])">修改状态</a>
                             </td>
                             <input type="hidden" th:each="v : ${grid.rows[mStat.index]}" th:if="${report.reportColumnList.get(vStat.index).hidden}" th:name="${report.reportColumnList.get(vStat.index).name}" th:value="${v}" />
                         </tr>
                         <tr th:if="${summary ne null}">
                             <td style="font-weight: bold;">合计</td>
+                            <td th:if="${'multiple' eq params['mode']}"></td>
                             <td class="text-right bold" th:each="n : ${report.reportColumnList}" th:text="${#numbers.formatDecimal(summary.get(n.name),1,'COMMA',2,'POINT')}" th:if="${!n.hidden}"></td>
                             <td></td>
                         </tr>
                         <tr class="tr-empty non-data" th:if="${grid.records < 1}">
-                            <td th:colspan="${report.visibleColumnSize + 2}" style="text-align: center;"><span class="empty-text">暂无数据</span></td>
+                            <td th:colspan="${report.visibleColumnSize + 2 + ('multiple' eq params['mode'] ? 1 : 0)}" style="text-align: center;"><span class="empty-text">暂无数据</span></td>
                         </tr>
                         </tbody>
                     </table>
@@ -124,6 +102,14 @@
                             <option value="200" th:selected="${grid.pageSize == 200}">200条</option>
                         </select>
                         <span th:if="${grid.totalPages > 1}">，前往<input class="goto" style="width: 68px;" th:onkeyup="'gotoPage(this, ' + ${grid.page} + ')'" maxlength="6" th:value="${grid.page}">页</span>
+                    </div>
+                    <div id="batch-cpn-bar" style="margin-left: 16px; float: left; margin-bottom: 8px;" th:if="${'multiple' eq params['mode']}">
+                        <div class="btn-toolbar" role="toolbar">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-light" style="padding: .075rem .45rem" type="button" onclick="batchDelete()" disabled><i class="fa fa-trash-o fa-lg"></i></button>
+<!--                                <button class="btn btn-light" style="padding: .075rem .45rem" type="button"><i class="fa fa-trash-o fa-lg"></i></button>-->
+                            </div>
+                        </div>
                     </div>
                     <nav style="float: right" th:if="${grid.totalPages > 1}">
                         <ul class="pagination pagination-sm">
@@ -162,6 +148,8 @@
     </div>
 </th:block>
 <th:block th:replace="includes/base :: common_js(~{::script})">
+    <script th:src="@{/js/jquery.dialog.js}"></script>
+
     <script type="text/javascript" th:src="@{/js/table/jquery.form.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/jquery.form2json.js}"></script>
     <script type="text/javascript" th:src="@{/js/table/jquery.table.js}"></script>
@@ -173,24 +161,8 @@
     <script type="text/javascript" th:src="@{/js/table/jquery.exportTable.js}"></script>
     <script th:src="@{/editable-table/editable-table.js}"></script>
     <script th:src="@{/ajaxfileupload.js}"></script>
-    <script th:src="@{/js/jquery.dialogInput.js}"></script>
 
     <script th:inline="javascript">
-        let urlObject = getUrlObject();
-
-        $('#material_id_container').dialogInput({
-            title: '选择物料',
-            name: 'material_id',
-            value: urlObject.material_id,
-            reportId: '697147523487240192',
-            labelDisplay: function (row) {
-                return row.name + ' ' + (!row.specification ? '' : row.specification)
-            },
-            selected: function () {
-                $('.query-form-container button[name=search]').click()
-            }
-        })
-
         $.fn.multipleSelect.locales['zh-CN'] = {
             formatSelectAll: function () {
                 return '[全选]'
@@ -208,8 +180,10 @@
 
         $.extend($.fn.multipleSelect.defaults, $.fn.multipleSelect.locales['zh-CN'])
 
+        let urlObject = getUrlObject();
+
         /*<![CDATA[*/
-        var fz = [[${report.queryFieldList}]]
+        var fz = [[${report.queryFieldList}]] || []
         var multipleSelect = fz.filter(f => f.type == 'MULTIPLE_SELECT')
         multipleSelect.forEach(f => {
             var value = urlObject[f.name]
@@ -246,17 +220,15 @@
         $('#exportBtn').attr('href', $('#exportBtn').attr('href') + _newUrl())
 
         let $modal = $('#dialog')
-        let form_id =/*[[${report.additionalInfo != null && report.additionalInfo['formId'] != null ? report.additionalInfo['formId'] : '' } + '']]*/
+        let report = [[${report}]]
 
         function showDialog(title, id) {
-            $('#dialog-title').text(title)
-
-            $.get('/forms/page/' + form_id + (!id ? '' : '/' + id) + '?readonly=' + (title === '查看'), function (res) {
-                $modal.find('.modal-body').html(res)
-                $modal.modal({
-                    show: true,
-                    backdrop: 'static'
-                })
+            $.dialog({
+                title: 'BOM',
+                content: '/produce_bom/schedule/'+id+'/view',
+                class: 'modal-dialog-auto',
+                lazy: false,
+                showFooter: false
             })
         }
 
@@ -271,10 +243,36 @@
             })
         })
 
-        function deleteRow(id) {
-            if (confirm('确定要删除该条记录吗？')) {
+        function completeProduce(id) {
+            if (confirm('确定要修改状态吗？')) {
                 $.ajax({
-                    url: '/forms/ajax/' + form_id + '/' + id,
+                    url: '/produce_bom/schedule/' + id,
+                    type: "put",
+                    success: function(){
+                        toastr.success("标记完成")
+                        setTimeout(() => {
+                            // $('[name=reset]').click()
+                            window.location.reload()
+                        }, 1000)
+                    }
+                });
+            }
+        }
+
+        function batchDelete() {
+            let selectedIds = []
+            $('table > tbody td:nth-child(2) > input[type=checkbox]:checked').each(function () {
+                console.log($(this).prop("name"), '...')
+                selectedIds.push($(this).prop("name"))
+            })
+            if (!selectedIds.length) {
+                alert('请选择要删除的行！')
+                return
+            }
+
+            if (confirm('确定要删除记录吗？')) {
+                $.ajax({
+                    url: '/forms/ajax/' + form_id + '?ids=' + selectedIds,
                     type: "delete",
                     success: function(){
                         $modal.modal('hide');
@@ -288,8 +286,37 @@
             }
         }
 
-        /*[(${(report.additionalInfo != null && report.additionalInfo['js'] != null ) ? report.additionalInfo['js'] : ''})]*/
+        let $tableSelectAllCheckbox = $('#table-select-all-checkbox')
+        let $rowCheckbox = $('table > tbody td:nth-child(2) > input[type=checkbox]');
+        let $batchCpnBar = $('#batch-cpn-bar');
 
+        $tableSelectAllCheckbox.on('click', function () {
+            $rowCheckbox.prop('checked', $(this).prop('checked'))
+            $batchCpnBar.find('button').prop("disabled", !$(this).prop('checked'))
+        })
+
+        $rowCheckbox.on('click', function () {
+            let currentCheck = $(this).prop('checked')
+            let allCheckboxRelated = true
+            let nonChecked = true;
+            $rowCheckbox.each(function () {
+                if(allCheckboxRelated && (!currentCheck || ($(this).prop('checked') !== currentCheck))) {
+                    allCheckboxRelated = false
+                }
+
+                if (nonChecked && $(this).prop('checked')) {
+                    nonChecked = false
+                }
+            })
+
+            if (allCheckboxRelated || !currentCheck) {
+                $tableSelectAllCheckbox.prop('checked', currentCheck)
+            }
+
+            $batchCpnBar.find('button').prop("disabled", nonChecked)
+        })
+
+        /*[(${(report.additionalInfo != null && report.additionalInfo['js'] != null ) ? report.additionalInfo['js'] : ''})]*/
     </script>
 </th:block>
 </body>
